<resources>
    <string name="app_name">EmptyWallet</string>
    <string name="action_settings">Settings</string>
    <string name="hint_title">Title…</string>
    <string name="button_save">Save</string>
    <string name="updateTransaction">Update</string>
    <string name="hint_amount">Amount…</string>
    <string name="hint_description">Description…</string>
    <string name="empty_not_saved">Transaction must have a title , amount and category.</string>
    <string name="set_filters">Set filter</string>
    <string name="filterinclude">Include only</string>
    <string name="filterexclude">Exclude if</string>
    <string name="addconditioncategory">Add filter category</string>
    <string name="addconditiontag">Add filter tag</string>


    <string name="newtransaction">New Transaction</string>
    <string name="whatif">What if</string>
    <string name="spentday">Euros spent in the last day</string>
    <string name="spentweek">Euros spent in the last week</string>
    <string name="spentmonth">Euros spent in the last month</string>

    <string name="togglepurchase">Purchase</string>
    <string name="toggleincome">Income</string>
    <string name="title_activity_select_tag">selectTagActivity</string>

    <string name="cancelTag">Cancel</string>
    <string name="newtag">Add new tag</string>
    <string name="tagnamehint">Tag name…</string>
    <string name="tagcolorhint">Tag colour…</string>
    <string name="tagemptyname">Add a title to your tag</string>

    <string name="newcategory">Add a new category</string>
    <string name="categorynameempty">Add a name to your category</string>
    <string name="categorynamehint">Add a category name…</string>
    <string name="fromDate">From</string>
    <string name="toDate">To</string>
    <string name="statsbutton">View Stats</string>
    <string name="budgethint">Add the budget amount…</string>
    <string name="newcatwrongamount">Amount needs to be a number</string>
    <string name="budgetlefttext">spent out of a budget of </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_filter">Save Filter</string>
</resources>
