<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".Transactions.TransactionFilterActivity">

    <LinearLayout
        android:id="@+id/transaction_filter_category_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/transaction_filter_category_holder_toggler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/basic_button"
                android:checked="true"
                android:text="ToggleButton" />

            <ToggleButton
                android:id="@+id/transaction_filter_category_holder_includeexclude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/basic_button"
                android:layout_weight="1"
                android:checked="true"
                android:text="ToggleButton"
                android:textOff="@string/filterinclude"
                android:textOn="@string/filterexclude" />

            <Button
                android:id="@+id/transaction_filter_category_holder_addspinner"
                style="@style/basic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addconditioncategory" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_filter_tag_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_filter_category_holder">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/transaction_filter_tag_holder_toggle"
                style="@style/basic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="ToggleButton" />

            <ToggleButton
                android:id="@+id/transaction_filter_tag_holder_includeexclude"
                style="@style/basic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="ToggleButton"
                android:textOff="@string/filterinclude"
                android:textOn="@string/filterexclude" />

            <Button
                android:id="@+id/transaction_filter_tag_holder_addtag"
                android:layout_width="match_parent"
                style="@style/basic_button"
                android:layout_height="wrap_content"
                android:text="@string/addconditiontag" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/transaction_filter_tags_holder_taglayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_filter_date_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/transaction_filter_tag_holder">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/transaction_filter_date_holder_fromToggle"
                style="@style/basic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="ToggleButton" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fromDate" />

            <EditText
                android:id="@+id/transaction_filter_date_holder_fromdatetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/transaction_filter_date_holder_toToggle"
                style="@style/basic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="ToggleButton" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toDate" />

            <EditText
                android:id="@+id/transaction_filter_date_holdertodatetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/transaction_filter_submitbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        style="@style/basic_button"
        android:text="@string/save_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>